# mpu6050_serial_to_imu

./: CMakeLists.txt  LICENSE  README.md  demo.launch  demo.rviz  package.xml
arduino/MPU6050/: MPU6050.ino
arduino/MPU6050_DMP6/: MPU6050_DMP6.ino
launch/: demo.launch
rviz/: demo.rviz
src/: mpu6050_serial_to_imu_node.cpp  serial_to_imu_node.cpp
